# tt

./: Cargo.toml  README.md  install.ps1  install.sh
src/: main.rs  system_info.rs
